--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <main>
         <p>Este es el contenido del sitio web lo principal. </p>
     </main>
+
+    <section id="caracteristicas">
+        <h2>Caracteristicas Principales</h2>
+        <ul>
+            <li>Diseno Responsivo</li>
+            <li>Optimizado par SEO</li>
+            <li>Carga Rapida</li>
+        </ul>
+    </section>
+
     <footer>
         <p> &copy; 2024 Mi sitio web </p>
     </footer>
