Add new section for the feature new1

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         </ul>
     </section>
 
+    <!-- Cambio 1 en la branch new1 --> 
+    <section id="caracteristicas">
+        <h2>Nuevos cambios en la branch new1</h2>
+        <ul>
+            <li>Hello world jajaja</li>
+        </ul>
+    </section>
+
     <footer>
         <p> &copy; 2024 Mi sitio web </p>
     </footer>
