Added basic contact page new2

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         </ul>
     </section>
 
+<!-- Nuevos cambios en new2 -->
+ <section id="caracteristicas">
+        <h2>Nueva funcionalidad en new2</h2>
+        <ul>
+            <li>Diseno Responsivo</li>
+        </ul>
+    </section>
+
     <footer>
         <p> &copy; 2024 Mi sitio web </p>
     </footer>
